# gitsh

./: .gitignore  .rubocop.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOALS  Gemfile  INSTALL  INSTALL.in  INSTALL.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  configure.rb  gitsh.gemspec
arch/: PKGBUILD  PKGBUILD.in
debian/: changelog  control  copyright  rules
etc/: completions
ext/gitsh/: extconf.rb
ext/gitsh/src/: line_editor.c
homebrew/: gitsh.rb.in
lib/: Makefile.am
lib/gitsh/: Makefile.am  argument_builder.rb  argument_list.rb  capturing_environment.rb  cli.rb  colors.rb  comment.rb  completer.rb  completion_escaper.rb  environment.rb  error.rb  exit_statuses.rb  file_runner.rb  git_command.rb  git_command_list.rb  git_driver.rb  git_repository.rb  history.rb  interactive_runner.rb  internal_command.rb  interpreter.rb  lexer.rb  line_editor.rb  line_editor_history_filter.rb  magic_variables.rb  module_delegator.rb  noop.rb  parser.rb  pipeline_environment.rb  program_name.rb  prompt_color.rb  prompter.rb  quote_detector.rb  readline_blank_filter.rb  readline_history_filter.rb  registry.rb  script_runner.rb  shell_command.rb  shell_command_runner.rb  string_runner.rb  (+5 more)
lib/gitsh/arguments/: brace_expansion.rb  composite_argument.rb  pattern_value.rb  single_character_glob.rb  string_argument.rb  string_value.rb  subshell.rb  variable_argument.rb
lib/gitsh/commands/: error_handler.rb  factory.rb  git_command.rb  internal_command.rb  lazy_command.rb  noop.rb  pipeline.rb  shell_command.rb  tree.rb
lib/gitsh/git_repository/: status.rb
lib/gitsh/input_strategies/: file.rb  interactive.rb  string.rb
lib/gitsh/lexer/: character_class.rb
lib/gitsh/parser/: character_class.rb
lib/gitsh/tab_completion/: README.md  alias_expander.rb  automaton.rb  automaton_factory.rb  command_completer.rb  context.rb  dsl.rb  escaper.rb  facade.rb  tokens_to_words.rb  variable_completer.rb  visualization.rb  vizualisation.rb
lib/gitsh/tab_completion/dsl/: choice_factory.rb  concatenation_factory.rb  fallback_transition_factory.rb  lexer.rb  maybe_operation_factory.rb  null_factory.rb  option.rb  option_transition_factory.rb  parse_error.rb  parser.rb  plus_operation_factory.rb  rule_factory.rb  rule_set_factory.rb  star_operation_factory.rb  text_transition_factory.rb  variable_transition_factory.rb
lib/gitsh/tab_completion/matchers/: alias_matcher.rb  anything_matcher.rb  base_matcher.rb  branch_matcher.rb  command_matcher.rb  directory_path_matcher.rb  environment_matcher.rb  option_matcher.rb  path_matcher.rb  remote_matcher.rb  revision_matcher.rb  stash_matcher.rb  tag_matcher.rb  text_matcher.rb  treeish_matcher.rb  unknown_option_matcher.rb
man/: Makefile.am
man/man1/: gitsh.1  gitsh.1.in
man/man5/: gitsh_completions.5  gitsh_completions.5.in
spec/: Makefile.am  spec_helper.rb
spec/fixtures/: fake_git
spec/integration/: argument_globbing_spec.rb  arguments_spec.rb  blank_line_spec.rb  cd_command_spec.rb  chaining_spec.rb  coloring_spec.rb  command_arguments_spec.rb  comment_spec.rb  completion_errors_spec.rb  correction_spec.rb  create_repository_spec.rb  default_command_spec.rb  default_git_command_spec.rb  default_git_path_spec.rb  empty_string_spec.rb  error_handling_spec.rb  escaping_spec.rb  gitshrc_spec.rb  greeting_spec.rb  help_command_spec.rb  inputrc_spec.rb  magic_variables_spec.rb  multi_line_input_spec.rb  persistent_history_spec.rb  pipeline_spec.rb  prompt_spec.rb  running_scripts_spec.rb  shell_commands_spec.rb  source_command_spec.rb  subshell_spec.rb  tab_completion_spec.rb  variables_spec.rb
spec/support/: argument_values.rb  arguments.rb  colors.rb  delegate_matcher.rb  execute_matcher.rb  fake_line_editor.rb  fake_readline.rb  file_system.rb  fixtures.rb  gitsh_runner.rb  internal_command_shared_examples.rb  parser.rb  produce_tokens_matcher.rb  registry.rb  scripts.rb  signalling_line_editor.rb  signalling_readline.rb  stubbed_method_result.rb  tab_completion.rb  tokens.rb  working_directory.rb
spec/units/: argument_builder_spec.rb  argument_list_spec.rb  capturing_environment_spec.rb  cli_spec.rb  completer_spec.rb  completion_escaper_spec.rb  environment_spec.rb  file_runner_spec.rb  git_command_list_spec.rb  git_command_spec.rb  git_repository_spec.rb  history_spec.rb  interactive_runner_spec.rb  internal_command_spec.rb  interpreter_spec.rb  lexer_spec.rb  line_editor_history_filter_spec.rb  line_editor_spec.rb  magic_variables_spec.rb  parser_spec.rb  pipeline_environment_spec.rb  prompt_color_spec.rb  prompter_spec.rb  quote_detector_spec.rb  readline_blank_filter_spec.rb  readline_history_filter_spec.rb  registry_spec.rb  script_runner_spec.rb  shell_command_runner_spec.rb  shell_command_spec.rb  string_runner_spec.rb  term_info_spec.rb  terminal_spec.rb  transformer_spec.rb  tree_spec.rb
spec/units/arguments/: brace_expansion_spec.rb  composite_argument_spec.rb  pattern_value_spec.rb  single_character_glob_spec.rb  string_argument_spec.rb  string_value_spec.rb  subshell_spec.rb  variable_argument_spec.rb
spec/units/commands/: error_handler_spec.rb  factory_spec.rb  git_command_spec.rb  internal_command_spec.rb  lazy_command_spec.rb  pipeline_spec.rb  shell_command_spec.rb  tree_spec.rb
spec/units/commands/internal/: chdir_spec.rb  echo_spec.rb  exit_spec.rb  help_spec.rb  set_spec.rb  source_spec.rb  unknown_spec.rb
spec/units/git_repository/: status_spec.rb
spec/units/input_strategies/: file_spec.rb  interactive_spec.rb  string_spec.rb
spec/units/lexer/: character_class_spec.rb
spec/units/parser/: character_class_spec.rb
spec/units/tab_completion/: alias_expander_spec.rb  automaton_factory_spec.rb  automaton_spec.rb  command_completer_spec.rb  context_spec.rb  dsl_spec.rb  escaper_spec.rb  facade_spec.rb  tokens_to_words_spec.rb  variable_completer_spec.rb  visualization_spec.rb  vizualisation_spec.rb
spec/units/tab_completion/automaton/: session_spec.rb
spec/units/tab_completion/dsl/: choice_factory_spec.rb  lexer_spec.rb  (+13 more)
src/: Makefile.am  gitsh.c  gitsh.in  gitsh.rb.in
(+17 files in other folders)
